map was  not showing because i had not styled it in css, resolved the issue. map and markers now working well!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,10 @@ font-size: 25px;
 font-weight: 300;
    
 }
+
+/* features */
+
+#map{
+position: relative;
+height: 300px;
+}
